--- a/ApiIsolated/ApiIsolated.csproj
+++ b/ApiIsolated/ApiIsolated.csproj
@@ -18,4 +18,7 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
 </Project>
