--- a/ApiIsolated/local.settings.example.json
+++ b/ApiIsolated/local.settings.example.json
@@ -2,7 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
   },
   "Host": {
     "LocalHttpPort": 7071,
