--- a/Client/Properties/launchSettings.json
+++ b/Client/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "BlazorApp.Client": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
