--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,6 +37,10 @@ jobs:
       run: npm ci
     - name: Install Playwright
       run: npx playwright install --with-deps
+    - name: Install Azure static web apps
+      run: npm install @azure/static-web-apps-cli
+    - name: Install Azure function apps
+      run: npm i -g azure-functions-core-tools@3 --unsafe-perm true
     - name: Start web app and function app
       run: swa start http://localhost:5000 --run "dotnet run --project Client/Client.csproj" --api-location Api
     - name: Run your tests
