--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,10 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Playwright tests
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push or pull request and nightly
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
   schedule: 
     # nightly
     - cron: '0 0 * * *'
@@ -16,11 +12,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  playwright_tests:
+    # Runs on an ubuntu runner
     runs-on: ubuntu-latest
 
     strategy:
